Tweaking brand and navigation color

--- a/source/patterns/header.html
+++ b/source/patterns/header.html
@@ -2,8 +2,8 @@
 
   <header id="masthead" class="site-header" role="banner">
     <div class="site-branding">
-      <p class="site-title"><a href="#" rel="home">WordCamp Europe 2017</a></p>
-      <p class="site-description">June 15-17, Paris, France | #WCEU</p>
+      <p class="site-title"><a href="#" rel="home">WordCamp Europe 2018</a></p>
+      <p class="site-description">June 14-16, Belgrade, Serbia | #WCEU</p>
     </div><!-- .site-branding -->
 
     <nav id="site-navigation" class="main-navigation page-navigation-container" role="navigation">
