--- a/source/patterns/branding.html
+++ b/source/patterns/branding.html
@@ -1,7 +1,7 @@
 <header id="masthead" class="site-header" role="banner">
   <div class="site-branding">
-    <p class="site-title"><a href="#" rel="home">WordCamp Name</a></p>
-    <p class="site-description">City, Country – Month, Date, Year.</p>
+    <p class="site-title"><a href="#" rel="home">WordCamp Europe 2018</a></p>
+    <p class="site-description">June 14-16, Belgrade, Serbia | #WCEU</p>
   </div><!-- .site-branding -->
   <!-- #site-navigation -->
 </header><!-- #masthead -->
