--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -98,8 +98,8 @@
 <p>WordCamp header. Read more about <a href="section-1.html#kssref-1-colors">colors</a> and <a href="section-1.html#kssref-1-typography">fonts</a> used on the site.</p>
 <p><header id="masthead" class="site-header" role="banner">
   <div class="site-branding">
-    <p class="site-title"><a href="#" rel="home">WordCamp Name</a></p>
-    <p class="site-description">City, Country – Month, Date, Year.</p>
+    <p class="site-title"><a href="#" rel="home">WordCamp Europe 2018</a></p>
+    <p class="site-description">June 14-16, Belgrade, Serbia | #WCEU</p>
   </div><!-- .site-branding -->
   <!-- #site-navigation -->
 </header><!-- #masthead --></p>
