--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -347,8 +347,8 @@
         <div class="kss-modifier__example">
           <header id="masthead" class="site-header" role="banner">
   <div class="site-branding">
-    <p class="site-title"><a href="#" rel="home">WordCamp Name</a></p>
-    <p class="site-description">City, Country – Month, Date, Year.</p>
+    <p class="site-title"><a href="#" rel="home">WordCamp Europe 2018</a></p>
+    <p class="site-description">June 14-16, Belgrade, Serbia | #WCEU</p>
   </div><!-- .site-branding -->
   <!-- #site-navigation -->
 </header><!-- #masthead -->
@@ -358,8 +358,8 @@
       <div class="kss-markup kss-style">
         <pre class="prettyprint lang-html"><code data-language="html">&lt;header id=&quot;masthead&quot; class=&quot;site-header&quot; role=&quot;banner&quot;&gt;
   &lt;div class=&quot;site-branding&quot;&gt;
-    &lt;p class=&quot;site-title&quot;&gt;&lt;a href=&quot;#&quot; rel=&quot;home&quot;&gt;WordCamp Name&lt;/a&gt;&lt;/p&gt;
-    &lt;p class=&quot;site-description&quot;&gt;City, Country – Month, Date, Year.&lt;/p&gt;
+    &lt;p class=&quot;site-title&quot;&gt;&lt;a href=&quot;#&quot; rel=&quot;home&quot;&gt;WordCamp Europe 2018&lt;/a&gt;&lt;/p&gt;
+    &lt;p class=&quot;site-description&quot;&gt;June 14-16, Belgrade, Serbia | #WCEU&lt;/p&gt;
   &lt;/div&gt;&lt;!-- .site-branding --&gt;
   &lt;!-- #site-navigation --&gt;
 &lt;/header&gt;&lt;!-- #masthead --&gt;</code></pre>
@@ -894,8 +894,8 @@
 
   <header id="masthead" class="site-header" role="banner">
     <div class="site-branding">
-      <p class="site-title"><a href="#" rel="home">WordCamp Europe 2017</a></p>
-      <p class="site-description">June 15-17, Paris, France | #WCEU</p>
+      <p class="site-title"><a href="#" rel="home">WordCamp Europe 2018</a></p>
+      <p class="site-description">June 14-16, Belgrade, Serbia | #WCEU</p>
     </div><!-- .site-branding -->
 
     <nav id="site-navigation" class="main-navigation page-navigation-container" role="navigation">
@@ -952,8 +952,8 @@
 
   &lt;header id=&quot;masthead&quot; class=&quot;site-header&quot; role=&quot;banner&quot;&gt;
     &lt;div class=&quot;site-branding&quot;&gt;
-      &lt;p class=&quot;site-title&quot;&gt;&lt;a href=&quot;#&quot; rel=&quot;home&quot;&gt;WordCamp Europe 2017&lt;/a&gt;&lt;/p&gt;
-      &lt;p class=&quot;site-description&quot;&gt;June 15-17, Paris, France | #WCEU&lt;/p&gt;
+      &lt;p class=&quot;site-title&quot;&gt;&lt;a href=&quot;#&quot; rel=&quot;home&quot;&gt;WordCamp Europe 2018&lt;/a&gt;&lt;/p&gt;
+      &lt;p class=&quot;site-description&quot;&gt;June 14-16, Belgrade, Serbia | #WCEU&lt;/p&gt;
     &lt;/div&gt;&lt;!-- .site-branding --&gt;
 
     &lt;nav id=&quot;site-navigation&quot; class=&quot;main-navigation page-navigation-container&quot; role=&quot;navigation&quot;&gt;
