--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -107,7 +107,12 @@
 <p>We are depending on these <a href="http://codeguide.co/">coding standards</a> for developing flexible, durable, and sustainable HTML and CSS. This mostly affects CSS since HTML of the theme can&#39;t be changed without making global breaking changes. But by keeping CSS organized and following a specific writing style — we are making sure that code remains readable and maintainable.</p>
 <h2 id="components">Components</h2>
 <p>Every component has a static HTML example which helps in keeping the branding consistent.</p>
-
+<div class="message">
+<p class="">
+    <strong>Administrator package: 32000 Euro<br>
+    </strong><strong>Availability:</strong> 6 slots
+</p>
+</div>
     </div>
   </div>
 </article>
