--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -175,6 +175,12 @@
                 ><span class="kss-nav__name">Widget: Social</span>
               </a>
             </li>
+            <li class="kss-nav__menu-item">
+              <a href="section-6.html#kssref-6-widget-text-tickets-cta">
+                <span class="kss-nav__ref kss-nav__ref-child">6.17.3</span
+                ><span class="kss-nav__name">Widget: Tickets</span>
+              </a>
+            </li>
         </ul>
       </li>
       <li class="kss-nav__menu-item">
@@ -1999,6 +2005,74 @@
           &lt;a href=&quot;#&quot;&gt;&lt;strong&gt;WordPress&lt;/strong&gt; on Instagram&lt;/a&gt;
         &lt;/li&gt;
       &lt;/ul&gt;
+    &lt;/div&gt;
+  &lt;/aside&gt;
+&lt;/div&gt;</code></pre>
+      </div>
+
+      </section>
+      <section id="kssref-6-widget-text-tickets-cta" class="kss-section kss-section--depth-3">
+
+    <div class="kss-style">
+      <h3 class="kss-title kss-title--level-3">
+        <a class="kss-title__permalink" href="#kssref-6-widget-text-tickets-cta">
+          <span class="kss-title__ref">
+              6.17.3
+            <span class="kss-title__permalink-hash">
+                #6.widget.text-tickets-cta
+            </span>
+          </span>
+          Widget: Tickets
+        </a>
+      </h3>
+
+
+      <div class="kss-description">
+        <p>Custom tickets call–to–action widget displayed on the homepage</p>
+
+      </div>
+    </div>
+
+      <div class="kss-modifier__wrapper">
+        <div class="kss-modifier__heading kss-style">
+          Example
+        </div>
+        <div class="kss-modifier__example">
+          <div id="secondary">
+  <aside class="widget widget_text" id="text-3">
+    <h1 class="widget-title">Have your ticket for WordCamp Europe?</h1>
+    <div class="textwidget">
+      <p>Be a part of the most important WordPress conference in the world.</p>
+      <a class="realistic-ticket" href="#">
+        <span class="realistic-ticket__part-left">
+          <span class="realistic-ticket__info-label">Less than 300 tickets left</span>
+          <span class="realistic-ticket__info-action">Get your ticket today!</span>
+        </span>
+        <span class="realistic-ticket__part-right">
+          <span class="realistic-ticket__info-event">WordCamp Europe 2018</span>
+        <span>
+      </a>
+    </div>
+  </aside>
+</div>
+        </div>
+      </div>
+
+      <div class="kss-markup kss-style">
+        <pre class="prettyprint lang-html"><code data-language="html">&lt;div id=&quot;secondary&quot;&gt;
+  &lt;aside class=&quot;widget widget_text&quot; id=&quot;text-3&quot;&gt;
+    &lt;h1 class=&quot;widget-title&quot;&gt;Have your ticket for WordCamp Europe?&lt;/h1&gt;
+    &lt;div class=&quot;textwidget&quot;&gt;
+      &lt;p&gt;Be a part of the most important WordPress conference in the world.&lt;/p&gt;
+      &lt;a class=&quot;realistic-ticket&quot; href=&quot;#&quot;&gt;
+        &lt;span class=&quot;realistic-ticket__part-left&quot;&gt;
+          &lt;span class=&quot;realistic-ticket__info-label&quot;&gt;Less than 300 tickets left&lt;/span&gt;
+          &lt;span class=&quot;realistic-ticket__info-action&quot;&gt;Get your ticket today!&lt;/span&gt;
+        &lt;/span&gt;
+        &lt;span class=&quot;realistic-ticket__part-right&quot;&gt;
+          &lt;span class=&quot;realistic-ticket__info-event&quot;&gt;WordCamp Europe 2018&lt;/span&gt;
+        &lt;span&gt;
+      &lt;/a&gt;
     &lt;/div&gt;
   &lt;/aside&gt;
 &lt;/div&gt;</code></pre>
