--- a/source/patterns/widget-text-ticket-cta.html
+++ b/source/patterns/widget-text-ticket-cta.html
@@ -5,7 +5,7 @@
       <p>Be a part of the most important WordPress conference in the world.</p>
       <a class="realistic-ticket" href="#">
         <span class="realistic-ticket__part-left">
-          <span class="realistic-ticket__info-label">Less than 300 tickets left</span>
+          <span class="realistic-ticket__info-label">1000 tickets released</span>
           <span class="realistic-ticket__info-action">Get your ticket today!</span>
         </span>
         <span class="realistic-ticket__part-right">
