--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -2045,7 +2045,7 @@
       <p>Be a part of the most important WordPress conference in the world.</p>
       <a class="realistic-ticket" href="#">
         <span class="realistic-ticket__part-left">
-          <span class="realistic-ticket__info-label">Less than 300 tickets left</span>
+          <span class="realistic-ticket__info-label">1000 tickets released</span>
           <span class="realistic-ticket__info-action">Get your ticket today!</span>
         </span>
         <span class="realistic-ticket__part-right">
@@ -2066,7 +2066,7 @@
       &lt;p&gt;Be a part of the most important WordPress conference in the world.&lt;/p&gt;
       &lt;a class=&quot;realistic-ticket&quot; href=&quot;#&quot;&gt;
         &lt;span class=&quot;realistic-ticket__part-left&quot;&gt;
-          &lt;span class=&quot;realistic-ticket__info-label&quot;&gt;Less than 300 tickets left&lt;/span&gt;
+          &lt;span class=&quot;realistic-ticket__info-label&quot;&gt;1000 tickets released&lt;/span&gt;
           &lt;span class=&quot;realistic-ticket__info-action&quot;&gt;Get your ticket today!&lt;/span&gt;
         &lt;/span&gt;
         &lt;span class=&quot;realistic-ticket__part-right&quot;&gt;
