Widget spacing update

--- a/source/patterns/widget-text-ticket-cta.html
+++ b/source/patterns/widget-text-ticket-cta.html
@@ -1,8 +1,8 @@
 <div id="secondary">
   <aside class="widget widget_text" id="text-3">
-    <h1 class="widget-title">Have your ticket for WordCamp Europe?</h1>
+    <h1 class="widget-title">Get your #wceu Early Bird tickets</h1>
     <div class="textwidget">
-      <p>Be a part of the most important WordPress conference in the world.</p>
+      <p>And receive a special, limited-edition swag item</p>
       <a class="realistic-ticket" href="#">
         <span class="realistic-ticket__part-left">
           <span class="realistic-ticket__info-label">1000 tickets released</span>
