--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -2040,9 +2040,9 @@
         <div class="kss-modifier__example">
           <div id="secondary">
   <aside class="widget widget_text" id="text-3">
-    <h1 class="widget-title">Have your ticket for WordCamp Europe?</h1>
+    <h1 class="widget-title">Get your #wceu Early Bird tickets</h1>
     <div class="textwidget">
-      <p>Be a part of the most important WordPress conference in the world.</p>
+      <p>And receive a special, limited-edition swag item</p>
       <a class="realistic-ticket" href="#">
         <span class="realistic-ticket__part-left">
           <span class="realistic-ticket__info-label">1000 tickets released</span>
@@ -2061,9 +2061,9 @@
       <div class="kss-markup kss-style">
         <pre class="prettyprint lang-html"><code data-language="html">&lt;div id=&quot;secondary&quot;&gt;
   &lt;aside class=&quot;widget widget_text&quot; id=&quot;text-3&quot;&gt;
-    &lt;h1 class=&quot;widget-title&quot;&gt;Have your ticket for WordCamp Europe?&lt;/h1&gt;
+    &lt;h1 class=&quot;widget-title&quot;&gt;Get your #wceu Early Bird tickets&lt;/h1&gt;
     &lt;div class=&quot;textwidget&quot;&gt;
-      &lt;p&gt;Be a part of the most important WordPress conference in the world.&lt;/p&gt;
+      &lt;p&gt;And receive a special, limited-edition swag item&lt;/p&gt;
       &lt;a class=&quot;realistic-ticket&quot; href=&quot;#&quot;&gt;
         &lt;span class=&quot;realistic-ticket__part-left&quot;&gt;
           &lt;span class=&quot;realistic-ticket__info-label&quot;&gt;1000 tickets released&lt;/span&gt;
