Experimenting with main spacing

--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -1038,12 +1038,144 @@
           Example
         </div>
         <div class="kss-modifier__example">
-          Markup:
+          <div id="content" class="site-content">
+
+  <div id="content-widgets">
+
+    <div id="content-widget-1" class="content-widgets-block">
+
+      <aside class="widget widget_text" id="text-3">
+        <h1 class="widget-title">Get your #wceu Early Bird tickets</h1>
+        <div class="textwidget">
+          <p>And receive a special, limited-edition swag item</p>
+          <a class="realistic-ticket" href="#">
+            <span class="realistic-ticket__part-left">
+              <span class="realistic-ticket__info-label">1000 tickets released</span>
+              <span class="realistic-ticket__info-action">Get your ticket today!</span>
+            </span>
+            <span class="realistic-ticket__part-right">
+              <span class="realistic-ticket__info-event">WordCamp Europe 2018</span>
+            <span>
+          </a>
+        </div>
+      </aside>
+
+    </div>
+
+  </div>
+
+  <div id="primary" class="content-area" role="main">
+
+    <article>
+
+      <h1>Lorem ipsum dolor sit amet.</h1>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque sequi cum, aut, dolorum quam recusandae eum velit? Esse assumenda perspiciatis, reiciendis? At provident vero harum, id, rem sunt beatae ratione!</p>
+
+    </article>
+
+  </div>
+
+  <div id="secondary" class="widget-area" role="complementary">
+
+    <div id="primary-sidebar">
+
+      <section id="blog_subscription-3" class="widget jetpack_subscription_widget">
+        <h2 class="widget-title">Subscribe to WordCamp Europe 2017 News by email</h2>
+        <form action="#" method="post" accept-charset="utf-8" id="subscribe-blog-blog_subscription-3">
+          <div id="subscribe-text"><p>Enter your email address to subscribe to this site and receive news by email.</p></div>
+          <p id="subscribe-email">
+            <label id="jetpack-subscribe-label" for="subscribe-field-blog_subscription-3" style="clip: rect(1px 1px 1px 1px); position: absolute; height: 1px; width: 1px; overflow: hidden;">
+                Email Address           </label>
+            <input type="email" name="email" required="required" class="required" value="" id="subscribe-field-blog_subscription-3" placeholder="Email Address">
+          </p>
+
+          <p id="subscribe-submit">
+            <input type="hidden" name="action" value="subscribe">
+            <input type="hidden" name="source" value="https://wceu2017.wc.dev.kau-boys.com/location/">
+            <input type="hidden" name="sub-type" value="widget">
+            <input type="hidden" name="redirect_fragment" value="blog_subscription-3">
+            <input type="hidden" id="_wpnonce" name="_wpnonce" value="f9cf755eb4">            <input type="submit" value="Sign me up!" name="jetpack_subscriptions_widget">
+          </p>
+        </form>
+      </section>
+
+    </div>
+
+  </div>
+
+</div>
         </div>
       </div>
 
       <div class="kss-markup kss-style">
-        <pre class="prettyprint lang-html"><code data-language="html">Markup:</code></pre>
+        <pre class="prettyprint lang-html"><code data-language="html">&lt;div id=&quot;content&quot; class=&quot;site-content&quot;&gt;
+
+  &lt;div id=&quot;content-widgets&quot;&gt;
+
+    &lt;div id=&quot;content-widget-1&quot; class=&quot;content-widgets-block&quot;&gt;
+
+      &lt;aside class=&quot;widget widget_text&quot; id=&quot;text-3&quot;&gt;
+        &lt;h1 class=&quot;widget-title&quot;&gt;Get your #wceu Early Bird tickets&lt;/h1&gt;
+        &lt;div class=&quot;textwidget&quot;&gt;
+          &lt;p&gt;And receive a special, limited-edition swag item&lt;/p&gt;
+          &lt;a class=&quot;realistic-ticket&quot; href=&quot;#&quot;&gt;
+            &lt;span class=&quot;realistic-ticket__part-left&quot;&gt;
+              &lt;span class=&quot;realistic-ticket__info-label&quot;&gt;1000 tickets released&lt;/span&gt;
+              &lt;span class=&quot;realistic-ticket__info-action&quot;&gt;Get your ticket today!&lt;/span&gt;
+            &lt;/span&gt;
+            &lt;span class=&quot;realistic-ticket__part-right&quot;&gt;
+              &lt;span class=&quot;realistic-ticket__info-event&quot;&gt;WordCamp Europe 2018&lt;/span&gt;
+            &lt;span&gt;
+          &lt;/a&gt;
+        &lt;/div&gt;
+      &lt;/aside&gt;
+
+    &lt;/div&gt;
+
+  &lt;/div&gt;
+
+  &lt;div id=&quot;primary&quot; class=&quot;content-area&quot; role=&quot;main&quot;&gt;
+
+    &lt;article&gt;
+
+      &lt;h1&gt;Lorem ipsum dolor sit amet.&lt;/h1&gt;
+
+      &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque sequi cum, aut, dolorum quam recusandae eum velit? Esse assumenda perspiciatis, reiciendis? At provident vero harum, id, rem sunt beatae ratione!&lt;/p&gt;
+
+    &lt;/article&gt;
+
+  &lt;/div&gt;
+
+  &lt;div id=&quot;secondary&quot; class=&quot;widget-area&quot; role=&quot;complementary&quot;&gt;
+
+    &lt;div id=&quot;primary-sidebar&quot;&gt;
+
+      &lt;section id=&quot;blog_subscription-3&quot; class=&quot;widget jetpack_subscription_widget&quot;&gt;
+        &lt;h2 class=&quot;widget-title&quot;&gt;Subscribe to WordCamp Europe 2017 News by email&lt;/h2&gt;
+        &lt;form action=&quot;#&quot; method=&quot;post&quot; accept-charset=&quot;utf-8&quot; id=&quot;subscribe-blog-blog_subscription-3&quot;&gt;
+          &lt;div id=&quot;subscribe-text&quot;&gt;&lt;p&gt;Enter your email address to subscribe to this site and receive news by email.&lt;/p&gt;&lt;/div&gt;
+          &lt;p id=&quot;subscribe-email&quot;&gt;
+            &lt;label id=&quot;jetpack-subscribe-label&quot; for=&quot;subscribe-field-blog_subscription-3&quot; style=&quot;clip: rect(1px 1px 1px 1px); position: absolute; height: 1px; width: 1px; overflow: hidden;&quot;&gt;
+                Email Address           &lt;/label&gt;
+            &lt;input type=&quot;email&quot; name=&quot;email&quot; required=&quot;required&quot; class=&quot;required&quot; value=&quot;&quot; id=&quot;subscribe-field-blog_subscription-3&quot; placeholder=&quot;Email Address&quot;&gt;
+          &lt;/p&gt;
+
+          &lt;p id=&quot;subscribe-submit&quot;&gt;
+            &lt;input type=&quot;hidden&quot; name=&quot;action&quot; value=&quot;subscribe&quot;&gt;
+            &lt;input type=&quot;hidden&quot; name=&quot;source&quot; value=&quot;https://wceu2017.wc.dev.kau-boys.com/location/&quot;&gt;
+            &lt;input type=&quot;hidden&quot; name=&quot;sub-type&quot; value=&quot;widget&quot;&gt;
+            &lt;input type=&quot;hidden&quot; name=&quot;redirect_fragment&quot; value=&quot;blog_subscription-3&quot;&gt;
+            &lt;input type=&quot;hidden&quot; id=&quot;_wpnonce&quot; name=&quot;_wpnonce&quot; value=&quot;f9cf755eb4&quot;&gt;            &lt;input type=&quot;submit&quot; value=&quot;Sign me up!&quot; name=&quot;jetpack_subscriptions_widget&quot;&gt;
+          &lt;/p&gt;
+        &lt;/form&gt;
+      &lt;/section&gt;
+
+    &lt;/div&gt;
+
+  &lt;/div&gt;
+
+&lt;/div&gt;</code></pre>
       </div>
 
       </section>
