Widget area update

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -103,6 +103,8 @@
   </div><!-- .site-branding -->
   <!-- #site-navigation -->
 </header><!-- #masthead --></p>
+<h2 id="widgets">Widgets</h2>
+<p>All widget areas on the webpage <a href="section-6.html#kssref-6-widget-areas">presented visually</a>.</p>
 <h2 id="code-standards">Code standards</h2>
 <p>We are depending on these <a href="http://codeguide.co/">coding standards</a> for developing flexible, durable, and sustainable HTML and CSS. This mostly affects CSS since HTML of the theme can&#39;t be changed without making global breaking changes. But by keeping CSS organized and following a specific writing style — we are making sure that code remains readable and maintainable.</p>
 <h2 id="components">Components</h2>
