--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -181,6 +181,12 @@
                 ><span class="kss-nav__name">Widget: Tickets</span>
               </a>
             </li>
+            <li class="kss-nav__menu-item">
+              <a href="section-6.html#kssref-6-widget-areas">
+                <span class="kss-nav__ref ">6.18</span
+                ><span class="kss-nav__name">Widgets</span>
+              </a>
+            </li>
         </ul>
       </li>
       <li class="kss-nav__menu-item">
@@ -2207,6 +2213,70 @@
       &lt;/a&gt;
     &lt;/div&gt;
   &lt;/aside&gt;
+&lt;/div&gt;</code></pre>
+      </div>
+
+      </section>
+      <section id="kssref-6-widget-areas" class="kss-section kss-section--depth-2">
+
+    <div class="kss-style">
+      <h2 class="kss-title kss-title--level-2">
+        <a class="kss-title__permalink" href="#kssref-6-widget-areas">
+          <span class="kss-title__ref">
+              6.18
+            <span class="kss-title__permalink-hash">
+                #6.widget-areas
+            </span>
+          </span>
+          Widgets
+        </a>
+      </h2>
+
+
+      <div class="kss-description">
+        <p>Showing all available widget areas on the page</p>
+
+      </div>
+    </div>
+
+      <div class="kss-modifier__wrapper">
+        <div class="kss-modifier__heading kss-style">
+          Example
+        </div>
+        <div class="kss-modifier__example">
+          <div id="page" class="site styleguide-widget-areas">
+	<header id="masthead" class="site-header" role="banner">
+		Logo and branding
+	</header>
+	<div id="content" class="site-content">
+		<div id="content-widgets">
+			<div id="content-widget-1" class="content-widgets-block">
+				Widget placeholder
+			</div>
+			<div id="content-widget-2" class="content-widgets-block">
+				Widget placeholder
+			</div>
+		</div>
+	</div>
+</div>
+        </div>
+      </div>
+
+      <div class="kss-markup kss-style">
+        <pre class="prettyprint lang-html"><code data-language="html">&lt;div id=&quot;page&quot; class=&quot;site styleguide-widget-areas&quot;&gt;
+	&lt;header id=&quot;masthead&quot; class=&quot;site-header&quot; role=&quot;banner&quot;&gt;
+		Logo and branding
+	&lt;/header&gt;
+	&lt;div id=&quot;content&quot; class=&quot;site-content&quot;&gt;
+		&lt;div id=&quot;content-widgets&quot;&gt;
+			&lt;div id=&quot;content-widget-1&quot; class=&quot;content-widgets-block&quot;&gt;
+				Widget placeholder
+			&lt;/div&gt;
+			&lt;div id=&quot;content-widget-2&quot; class=&quot;content-widgets-block&quot;&gt;
+				Widget placeholder
+			&lt;/div&gt;
+		&lt;/div&gt;
+	&lt;/div&gt;
 &lt;/div&gt;</code></pre>
       </div>
 
