--- a/styleguide/section-1.html
+++ b/styleguide/section-1.html
@@ -531,8 +531,8 @@ Local color variables should be used <strong>only</strong> in _settings.colors.s
 
       <div class="kss-description">
         <p>Write about your typography choices for this WordCamp.</p>
-<p><strong>Typeface Name</strong> is used as the font for WordCamp logo and for all headlines.</p>
-<p><strong>Typeface Name</strong> is used for body text, buttons, forms etc.</p>
+<p>Josefin Sans is used as the font for WordCamp logo and for all headlines.</p>
+<p>Source Sans Pro is used for body text, buttons, forms etc.</p>
 
       </div>
     </div>
