--- a/source/patterns/styleguide-widgets.html
+++ b/source/patterns/styleguide-widgets.html
@@ -10,6 +10,9 @@
 			<div id="content-widget-2" class="content-widgets-block">
 				Widget placeholder
 			</div>
+            <div id="content-widget-3" class="content-widgets-block">
+				Widget placeholder
+			</div>
 		</div>
 	</div>
 </div>
