adding widget Test 2

--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -2256,6 +2256,9 @@
 			<div id="content-widget-2" class="content-widgets-block">
 				Widget placeholder
 			</div>
+            <div id="content-widget-3" class="content-widgets-block">
+				Widget placeholder
+			</div>
 		</div>
 	</div>
 </div>
@@ -2273,6 +2276,9 @@
 				Widget placeholder
 			&lt;/div&gt;
 			&lt;div id=&quot;content-widget-2&quot; class=&quot;content-widgets-block&quot;&gt;
+				Widget placeholder
+			&lt;/div&gt;
+            &lt;div id=&quot;content-widget-3&quot; class=&quot;content-widgets-block&quot;&gt;
 				Widget placeholder
 			&lt;/div&gt;
 		&lt;/div&gt;
