test with 4th widget

--- a/source/patterns/styleguide-widgets.html
+++ b/source/patterns/styleguide-widgets.html
@@ -13,6 +13,9 @@
             <div id="content-widget-3" class="content-widgets-block">
 				Widget placeholder
 			</div>
+            <div id="content-widget-4" class="content-widgets-block">
+				Widget placeholder
+			</div>
 		</div>
 	</div>
 </div>
