--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -2259,6 +2259,9 @@
             <div id="content-widget-3" class="content-widgets-block">
 				Widget placeholder
 			</div>
+            <div id="content-widget-4" class="content-widgets-block">
+				Widget placeholder
+			</div>
 		</div>
 	</div>
 </div>
@@ -2279,6 +2282,9 @@
 				Widget placeholder
 			&lt;/div&gt;
             &lt;div id=&quot;content-widget-3&quot; class=&quot;content-widgets-block&quot;&gt;
+				Widget placeholder
+			&lt;/div&gt;
+            &lt;div id=&quot;content-widget-4&quot; class=&quot;content-widgets-block&quot;&gt;
 				Widget placeholder
 			&lt;/div&gt;
 		&lt;/div&gt;
