--- a/source/patterns/styleguide-widgets.html
+++ b/source/patterns/styleguide-widgets.html
@@ -1,11 +1,28 @@
 <div id="page" class="site styleguide-widget-areas">
 	<header id="masthead" class="site-header" role="banner">
 		Logo and branding
+        <div id="header-widgets">
+            <div id="header-widget-1" class="header-widgets-block">
+                Header Widget Area 1
+            </div>
+            <div id="header-widget-2" class="header-widgets-block">
+                Header Widget Area 2
+            </div>
+            <div id="header-widget-3" class="header-widgets-block">
+                Header Widget Area 3
+            </div>
+            <div id="header-widget-4" class="header-widgets-block">
+                Header Widget Area 4
+            </div>
+            <div id="header-widget-5" class="header-widgets-block">
+                Header Widget Area 5
+            </div>
+        </div>
 	</header>
 	<div id="content" class="site-content">
 		<div id="content-widgets">
 			<div id="content-widget-1" class="content-widgets-block">
-				Widget placeholder
+				Before Content (All Pages except Homepage)
 			</div>
 			<div id="content-widget-2" class="content-widgets-block">
 				Widget placeholder
