--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -2247,11 +2247,28 @@
           <div id="page" class="site styleguide-widget-areas">
 	<header id="masthead" class="site-header" role="banner">
 		Logo and branding
+        <div id="header-widgets">
+            <div id="header-widget-1" class="header-widgets-block">
+                Header Widget Area 1
+            </div>
+            <div id="header-widget-2" class="header-widgets-block">
+                Header Widget Area 2
+            </div>
+            <div id="header-widget-3" class="header-widgets-block">
+                Header Widget Area 3
+            </div>
+            <div id="header-widget-4" class="header-widgets-block">
+                Header Widget Area 4
+            </div>
+            <div id="header-widget-5" class="header-widgets-block">
+                Header Widget Area 5
+            </div>
+        </div>
 	</header>
 	<div id="content" class="site-content">
 		<div id="content-widgets">
 			<div id="content-widget-1" class="content-widgets-block">
-				Widget placeholder
+				Before Content (All Pages except Homepage)
 			</div>
 			<div id="content-widget-2" class="content-widgets-block">
 				Widget placeholder
@@ -2272,11 +2289,28 @@
         <pre class="prettyprint lang-html"><code data-language="html">&lt;div id=&quot;page&quot; class=&quot;site styleguide-widget-areas&quot;&gt;
 	&lt;header id=&quot;masthead&quot; class=&quot;site-header&quot; role=&quot;banner&quot;&gt;
 		Logo and branding
+        &lt;div id=&quot;header-widgets&quot;&gt;
+            &lt;div id=&quot;header-widget-1&quot; class=&quot;header-widgets-block&quot;&gt;
+                Header Widget Area 1
+            &lt;/div&gt;
+            &lt;div id=&quot;header-widget-2&quot; class=&quot;header-widgets-block&quot;&gt;
+                Header Widget Area 2
+            &lt;/div&gt;
+            &lt;div id=&quot;header-widget-3&quot; class=&quot;header-widgets-block&quot;&gt;
+                Header Widget Area 3
+            &lt;/div&gt;
+            &lt;div id=&quot;header-widget-4&quot; class=&quot;header-widgets-block&quot;&gt;
+                Header Widget Area 4
+            &lt;/div&gt;
+            &lt;div id=&quot;header-widget-5&quot; class=&quot;header-widgets-block&quot;&gt;
+                Header Widget Area 5
+            &lt;/div&gt;
+        &lt;/div&gt;
 	&lt;/header&gt;
 	&lt;div id=&quot;content&quot; class=&quot;site-content&quot;&gt;
 		&lt;div id=&quot;content-widgets&quot;&gt;
 			&lt;div id=&quot;content-widget-1&quot; class=&quot;content-widgets-block&quot;&gt;
-				Widget placeholder
+				Before Content (All Pages except Homepage)
 			&lt;/div&gt;
 			&lt;div id=&quot;content-widget-2&quot; class=&quot;content-widgets-block&quot;&gt;
 				Widget placeholder
