Added all widget areas

--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -2265,22 +2265,73 @@
             </div>
         </div>
 	</header>
-	<div id="content" class="site-content">
+    <div id="content" class="site-content">
+        <div id="primary" class="content-area">
+            YOUR CONTENT
+        </div>
 		<div id="content-widgets">
 			<div id="content-widget-1" class="content-widgets-block">
 				Before Content (All Pages except Homepage)
 			</div>
 			<div id="content-widget-2" class="content-widgets-block">
-				Widget placeholder
+				Before Content (Homepage) Area 1
 			</div>
             <div id="content-widget-3" class="content-widgets-block">
-				Widget placeholder
+				Before Content (Homepage) Area 2
 			</div>
             <div id="content-widget-4" class="content-widgets-block">
-				Widget placeholder
+				Before Content (Homepage) Area 3
+			</div>
+            <div id="content-widget-5" class="content-widgets-block">
+				Before Content (Homepage) Area 4
+			</div>
+            <div id="content-widget-6" class="content-widgets-block">
+				Before Content (Homepage) Area 5
+			</div>
+            <div id="content-widget-7" class="content-widgets-block">
+				Before Content (Day Of) Area 1 
+			</div>
+            <div id="content-widget-8" class="content-widgets-block">
+				Before Content (Day Of) Area 2 
+			</div>
+            <div id="content-widget-9" class="content-widgets-block">
+				Before Content (Day Of) Area 3 
+			</div>
+            <div id="content-widget-10" class="content-widgets-block">
+				Before Content (Day Of) Area 4 
+			</div>
+            <div id="content-widget-11" class="content-widgets-block">
+				Before Content (Day Of) Area 5 
 			</div>
 		</div>
-	</div>
+        <aside id="secondary" class="widget-area" role="complementary">
+			<div id="primary-sidebar">
+                Primary Sidebar
+            </div>
+            <div id="secondary-sidebar">
+                Secondary Sidebar
+            </div>
+        </aside>
+    </div>
+    <footer id="colophon" class="site-footer" role="contentinfo">
+        <div id="footer-widgets">
+            <div id="footer-widget-1" class="footer-widgets-block">
+				Footer Widget Area 1
+			</div>
+            <div id="footer-widget-2" class="footer-widgets-block">
+				Footer Widget Area 2
+			</div>
+            <div id="footer-widget-3" class="footer-widgets-block">
+				Footer Widget Area 3
+			</div>
+            <div id="footer-widget-4" class="footer-widgets-block">
+				Footer Widget Area 4
+			</div>
+            <div id="footer-widget-5" class="footer-widgets-block">
+				Footer Widget Area 5
+			</div>
+        </div>
+    </footer>
 </div>
         </div>
       </div>
@@ -2307,22 +2358,73 @@
             &lt;/div&gt;
         &lt;/div&gt;
 	&lt;/header&gt;
-	&lt;div id=&quot;content&quot; class=&quot;site-content&quot;&gt;
+    &lt;div id=&quot;content&quot; class=&quot;site-content&quot;&gt;
+        &lt;div id=&quot;primary&quot; class=&quot;content-area&quot;&gt;
+            YOUR CONTENT
+        &lt;/div&gt;
 		&lt;div id=&quot;content-widgets&quot;&gt;
 			&lt;div id=&quot;content-widget-1&quot; class=&quot;content-widgets-block&quot;&gt;
 				Before Content (All Pages except Homepage)
 			&lt;/div&gt;
 			&lt;div id=&quot;content-widget-2&quot; class=&quot;content-widgets-block&quot;&gt;
-				Widget placeholder
+				Before Content (Homepage) Area 1
 			&lt;/div&gt;
             &lt;div id=&quot;content-widget-3&quot; class=&quot;content-widgets-block&quot;&gt;
-				Widget placeholder
+				Before Content (Homepage) Area 2
 			&lt;/div&gt;
             &lt;div id=&quot;content-widget-4&quot; class=&quot;content-widgets-block&quot;&gt;
-				Widget placeholder
+				Before Content (Homepage) Area 3
+			&lt;/div&gt;
+            &lt;div id=&quot;content-widget-5&quot; class=&quot;content-widgets-block&quot;&gt;
+				Before Content (Homepage) Area 4
+			&lt;/div&gt;
+            &lt;div id=&quot;content-widget-6&quot; class=&quot;content-widgets-block&quot;&gt;
+				Before Content (Homepage) Area 5
+			&lt;/div&gt;
+            &lt;div id=&quot;content-widget-7&quot; class=&quot;content-widgets-block&quot;&gt;
+				Before Content (Day Of) Area 1 
+			&lt;/div&gt;
+            &lt;div id=&quot;content-widget-8&quot; class=&quot;content-widgets-block&quot;&gt;
+				Before Content (Day Of) Area 2 
+			&lt;/div&gt;
+            &lt;div id=&quot;content-widget-9&quot; class=&quot;content-widgets-block&quot;&gt;
+				Before Content (Day Of) Area 3 
+			&lt;/div&gt;
+            &lt;div id=&quot;content-widget-10&quot; class=&quot;content-widgets-block&quot;&gt;
+				Before Content (Day Of) Area 4 
+			&lt;/div&gt;
+            &lt;div id=&quot;content-widget-11&quot; class=&quot;content-widgets-block&quot;&gt;
+				Before Content (Day Of) Area 5 
 			&lt;/div&gt;
 		&lt;/div&gt;
-	&lt;/div&gt;
+        &lt;aside id=&quot;secondary&quot; class=&quot;widget-area&quot; role=&quot;complementary&quot;&gt;
+			&lt;div id=&quot;primary-sidebar&quot;&gt;
+                Primary Sidebar
+            &lt;/div&gt;
+            &lt;div id=&quot;secondary-sidebar&quot;&gt;
+                Secondary Sidebar
+            &lt;/div&gt;
+        &lt;/aside&gt;
+    &lt;/div&gt;
+    &lt;footer id=&quot;colophon&quot; class=&quot;site-footer&quot; role=&quot;contentinfo&quot;&gt;
+        &lt;div id=&quot;footer-widgets&quot;&gt;
+            &lt;div id=&quot;footer-widget-1&quot; class=&quot;footer-widgets-block&quot;&gt;
+				Footer Widget Area 1
+			&lt;/div&gt;
+            &lt;div id=&quot;footer-widget-2&quot; class=&quot;footer-widgets-block&quot;&gt;
+				Footer Widget Area 2
+			&lt;/div&gt;
+            &lt;div id=&quot;footer-widget-3&quot; class=&quot;footer-widgets-block&quot;&gt;
+				Footer Widget Area 3
+			&lt;/div&gt;
+            &lt;div id=&quot;footer-widget-4&quot; class=&quot;footer-widgets-block&quot;&gt;
+				Footer Widget Area 4
+			&lt;/div&gt;
+            &lt;div id=&quot;footer-widget-5&quot; class=&quot;footer-widgets-block&quot;&gt;
+				Footer Widget Area 5
+			&lt;/div&gt;
+        &lt;/div&gt;
+    &lt;/footer&gt;
 &lt;/div&gt;</code></pre>
       </div>
 
