--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -104,104 +104,110 @@
               </a>
             </li>
             <li class="kss-nav__menu-item">
-              <a href="section-6.html#kssref-6-helpers-highlight">
+              <a href="section-6.html#kssref-6-headings-return-top">
                 <span class="kss-nav__ref kss-nav__ref-child">6.7.1</span
+                ><span class="kss-nav__name">Heading</span>
+              </a>
+            </li>
+            <li class="kss-nav__menu-item">
+              <a href="section-6.html#kssref-6-helpers-highlight">
+                <span class="kss-nav__ref kss-nav__ref-child">6.8.1</span
                 ><span class="kss-nav__name">Highlight</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-helpers-note">
-                <span class="kss-nav__ref kss-nav__ref-child">6.7.2</span
+                <span class="kss-nav__ref kss-nav__ref-child">6.8.2</span
                 ><span class="kss-nav__name">Note</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-images">
-                <span class="kss-nav__ref ">6.8</span
+                <span class="kss-nav__ref ">6.9</span
                 ><span class="kss-nav__name">Images</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-main">
-                <span class="kss-nav__ref ">6.9</span
+                <span class="kss-nav__ref ">6.10</span
                 ><span class="kss-nav__name">Main</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-navigation">
-                <span class="kss-nav__ref ">6.10</span
+                <span class="kss-nav__ref ">6.11</span
                 ><span class="kss-nav__name">Navigation</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-oembed">
-                <span class="kss-nav__ref ">6.11</span
+                <span class="kss-nav__ref ">6.12</span
                 ><span class="kss-nav__name">oEmbed</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-organizers">
-                <span class="kss-nav__ref ">6.12</span
+                <span class="kss-nav__ref ">6.13</span
                 ><span class="kss-nav__name">Organizers</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-pagination">
-                <span class="kss-nav__ref ">6.13</span
+                <span class="kss-nav__ref ">6.14</span
                 ><span class="kss-nav__name">Pagination</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-post">
-                <span class="kss-nav__ref ">6.14</span
+                <span class="kss-nav__ref ">6.15</span
                 ><span class="kss-nav__name">Post</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-schedule">
-                <span class="kss-nav__ref ">6.15</span
+                <span class="kss-nav__ref ">6.16</span
                 ><span class="kss-nav__name">Schedule</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-sessions">
-                <span class="kss-nav__ref ">6.16</span
+                <span class="kss-nav__ref ">6.17</span
                 ><span class="kss-nav__name">Sessions</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-speakers">
-                <span class="kss-nav__ref ">6.17</span
+                <span class="kss-nav__ref ">6.18</span
                 ><span class="kss-nav__name">Speakers</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-tickets">
-                <span class="kss-nav__ref ">6.18</span
+                <span class="kss-nav__ref ">6.19</span
                 ><span class="kss-nav__name">Tickets</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-widget-subscribe">
-                <span class="kss-nav__ref kss-nav__ref-child">6.19.1</span
+                <span class="kss-nav__ref kss-nav__ref-child">6.20.1</span
                 ><span class="kss-nav__name">Widget: Subscribe</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-widget-text-social">
-                <span class="kss-nav__ref kss-nav__ref-child">6.19.2</span
+                <span class="kss-nav__ref kss-nav__ref-child">6.20.2</span
                 ><span class="kss-nav__name">Widget: Social</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-widget-text-tickets-cta">
-                <span class="kss-nav__ref kss-nav__ref-child">6.19.3</span
+                <span class="kss-nav__ref kss-nav__ref-child">6.20.3</span
                 ><span class="kss-nav__name">Widget: Tickets</span>
               </a>
             </li>
             <li class="kss-nav__menu-item">
               <a href="section-6.html#kssref-6-widget-areas">
-                <span class="kss-nav__ref ">6.20</span
+                <span class="kss-nav__ref ">6.21</span
                 ><span class="kss-nav__name">Widgets</span>
               </a>
             </li>
@@ -1035,13 +1041,49 @@
       </div>
 
       </section>
+      <section id="kssref-6-headings-return-top" class="kss-section kss-section--depth-3">
+
+    <div class="kss-style">
+      <h3 class="kss-title kss-title--level-3">
+        <a class="kss-title__permalink" href="#kssref-6-headings-return-top">
+          <span class="kss-title__ref">
+              6.7.1
+            <span class="kss-title__permalink-hash">
+                #6.headings.return-top
+            </span>
+          </span>
+          Heading
+        </a>
+      </h3>
+
+
+      <div class="kss-description">
+        <p>Link inside a heading that anchors the user to top of the page</p>
+
+      </div>
+    </div>
+
+      <div class="kss-modifier__wrapper">
+        <div class="kss-modifier__heading kss-style">
+          Example
+        </div>
+        <div class="kss-modifier__example">
+          <h2 class="heading-top" id="main">Heading <a href="#main">Return to top</a></h2>
+        </div>
+      </div>
+
+      <div class="kss-markup kss-style">
+        <pre class="prettyprint lang-html"><code data-language="html">&lt;h2 class=&quot;heading-top&quot; id=&quot;main&quot;&gt;Heading &lt;a href=&quot;#main&quot;&gt;Return to top&lt;/a&gt;&lt;/h2&gt;</code></pre>
+      </div>
+
+      </section>
       <section id="kssref-6-helpers-highlight" class="kss-section kss-section--depth-3">
 
     <div class="kss-style">
       <h3 class="kss-title kss-title--level-3">
         <a class="kss-title__permalink" href="#kssref-6-helpers-highlight">
           <span class="kss-title__ref">
-              6.7.1
+              6.8.1
             <span class="kss-title__permalink-hash">
                 #6.helpers.highlight
             </span>
@@ -1081,7 +1123,7 @@
       <h3 class="kss-title kss-title--level-3">
         <a class="kss-title__permalink" href="#kssref-6-helpers-note">
           <span class="kss-title__ref">
-              6.7.2
+              6.8.2
             <span class="kss-title__permalink-hash">
                 #6.helpers.note
             </span>
@@ -1121,7 +1163,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-images">
           <span class="kss-title__ref">
-              6.8
+              6.9
             <span class="kss-title__permalink-hash">
                 #6.images
             </span>
@@ -1157,7 +1199,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-main">
           <span class="kss-title__ref">
-              6.9
+              6.10
             <span class="kss-title__permalink-hash">
                 #6.main
             </span>
@@ -1325,7 +1367,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-navigation">
           <span class="kss-title__ref">
-              6.10
+              6.11
             <span class="kss-title__permalink-hash">
                 #6.navigation
             </span>
@@ -1443,7 +1485,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-oembed">
           <span class="kss-title__ref">
-              6.11
+              6.12
             <span class="kss-title__permalink-hash">
                 #6.oembed
             </span>
@@ -1479,7 +1521,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-organizers">
           <span class="kss-title__ref">
-              6.12
+              6.13
             <span class="kss-title__permalink-hash">
                 #6.organizers
             </span>
@@ -1577,7 +1619,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-pagination">
           <span class="kss-title__ref">
-              6.13
+              6.14
             <span class="kss-title__permalink-hash">
                 #6.pagination
             </span>
@@ -1625,7 +1667,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-post">
           <span class="kss-title__ref">
-              6.14
+              6.15
             <span class="kss-title__permalink-hash">
                 #6.post
             </span>
@@ -1731,7 +1773,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-schedule">
           <span class="kss-title__ref">
-              6.15
+              6.16
             <span class="kss-title__permalink-hash">
                 #6.schedule
             </span>
@@ -1769,7 +1811,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-sessions">
           <span class="kss-title__ref">
-              6.16
+              6.17
             <span class="kss-title__permalink-hash">
                 #6.sessions
             </span>
@@ -1901,7 +1943,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-speakers">
           <span class="kss-title__ref">
-              6.17
+              6.18
             <span class="kss-title__permalink-hash">
                 #6.speakers
             </span>
@@ -1995,7 +2037,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-tickets">
           <span class="kss-title__ref">
-              6.18
+              6.19
             <span class="kss-title__permalink-hash">
                 #6.tickets
             </span>
@@ -2153,7 +2195,7 @@
       <h3 class="kss-title kss-title--level-3">
         <a class="kss-title__permalink" href="#kssref-6-widget-subscribe">
           <span class="kss-title__ref">
-              6.19.1
+              6.20.1
             <span class="kss-title__permalink-hash">
                 #6.widget.subscribe
             </span>
@@ -2221,7 +2263,7 @@
       <h3 class="kss-title kss-title--level-3">
         <a class="kss-title__permalink" href="#kssref-6-widget-text-social">
           <span class="kss-title__ref">
-              6.19.2
+              6.20.2
             <span class="kss-title__permalink-hash">
                 #6.widget.text-social
             </span>
@@ -2291,7 +2333,7 @@
       <h3 class="kss-title kss-title--level-3">
         <a class="kss-title__permalink" href="#kssref-6-widget-text-tickets-cta">
           <span class="kss-title__ref">
-              6.19.3
+              6.20.3
             <span class="kss-title__permalink-hash">
                 #6.widget.text-tickets-cta
             </span>
@@ -2359,7 +2401,7 @@
       <h2 class="kss-title kss-title--level-2">
         <a class="kss-title__permalink" href="#kssref-6-widget-areas">
           <span class="kss-title__ref">
-              6.20
+              6.21
             <span class="kss-title__permalink-hash">
                 #6.widget-areas
             </span>
