--- a/source/patterns/attendees.html
+++ b/source/patterns/attendees.html
@@ -1,7 +1,7 @@
 <div id="tix-attendees">
   <ul class="tix-attendee-list tix-columns-3">
     <li>
-      <img alt="" src="http://lorempixel.com/96/96/people/1/" class="avatar avatar-96 photo" height="96" width="96">
+      <img alt="" src="../source/assets/images/placeholder-96x96.jpg" class="avatar avatar-96 photo" height="96" width="96">
       <div class="tix-field tix-attendee-name">
         <span class="tix-first">Michelle</span>
         <span class="tix-last">Gutierrez</span>
@@ -9,7 +9,7 @@
       <a class="tix-field tix-attendee-twitter" href="#">@MichelleGutierrez</a><a class="tix-field tix-attendee-url" href="#">m-gutierrez.dev</a>
     </li>
     <li>
-      <img alt="" src="http://lorempixel.com/96/96/people/9/" class="avatar avatar-96 photo" height="96" width="96">
+      <img alt="" src="../source/assets/images/placeholder-96x96.jpg" class="avatar avatar-96 photo" height="96" width="96">
       <div class="tix-field tix-attendee-name">
         <span class="tix-first">Sara</span>
         <span class="tix-last">Mason</span>
@@ -17,7 +17,7 @@
       <a class="tix-field tix-attendee-twitter" href="#">@saram</a><a class="tix-field tix-attendee-url" href="#">hellofromtheotherside.dev</a>
     </li>
     <li>
-      <img alt="" src="http://lorempixel.com/96/96/people/10/" class="avatar avatar-96 photo" height="96" width="96">
+      <img alt="" src="../source/assets/images/placeholder-96x96.jpg" class="avatar avatar-96 photo" height="96" width="96">
       <div class="tix-field tix-attendee-name">
         <span class="tix-first">Willie</span>
         <span class="tix-last">Castro</span>
@@ -25,7 +25,7 @@
       <a class="tix-field tix-attendee-twitter" href="#">@castroisawesome</a><a class="tix-field tix-attendee-url" href="#">castro-home.dev</a>
     </li>
     <li>
-      <img alt="" src="http://lorempixel.com/96/96/people/5/" class="avatar avatar-96 photo" height="96" width="96">
+      <img alt="" src="../source/assets/images/placeholder-96x96.jpg" class="avatar avatar-96 photo" height="96" width="96">
       <div class="tix-field tix-attendee-name">
         <span class="tix-first">Eric</span>
         <span class="tix-last">Williamson</span>
