--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -1330,12 +1330,12 @@
           Example
         </div>
         <div class="kss-modifier__example">
-          <img class="size-full" src="http://lorempixel.com/800/200/people/1/" />
+          <img class="size-full" src="../source/assets/images/placeholder-800x200.jpg" />
         </div>
       </div>
 
       <div class="kss-markup kss-style">
-        <pre class="prettyprint lang-html"><code data-language="html">&lt;img class=&quot;size-full&quot; src=&quot;http://lorempixel.com/800/200/people/1/&quot; /&gt;</code></pre>
+        <pre class="prettyprint lang-html"><code data-language="html">&lt;img class=&quot;size-full&quot; src=&quot;../source/assets/images/placeholder-800x200.jpg&quot; /&gt;</code></pre>
       </div>
 
       </section>
