Wide grid modifier

--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -1523,7 +1523,7 @@
           Example
         </div>
         <div class="kss-modifier__example">
-          <div class="grid grid-three">
+          <div class="grid grid-wide grid-three">
   <div class="outline">
     <h3>Hello world</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus laudan atibus commodi.</p>
@@ -1553,7 +1553,7 @@
       </div>
 
       <div class="kss-markup kss-style">
-        <pre class="prettyprint lang-html"><code data-language="html">&lt;div class=&quot;grid grid-three&quot;&gt;
+        <pre class="prettyprint lang-html"><code data-language="html">&lt;div class=&quot;grid grid-wide grid-three&quot;&gt;
   &lt;div class=&quot;outline&quot;&gt;
     &lt;h3&gt;Hello world&lt;/h3&gt;
     &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus laudan atibus commodi.&lt;/p&gt;
