Corrected for longer names

--- a/source/patterns/speakers.html
+++ b/source/patterns/speakers.html
@@ -1,6 +1,6 @@
 <div class="wcorg-speakers">
   <div id="wcorg-speaker-name" class="wcorg-speaker wcorg-speaker-name">
-    <h2><a href="#">Michelle Gutierrez</a></h2>
+    <h2><a href="#">Michelle Gutierrez Fernandez Guerilla de la Cruz</a></h2>
     <div class="wcorg-speaker-description">
       <img alt="" src="../source/assets/images/placeholder-100x100.jpg" srcset="../source/assets/images/placeholder-100x100.jpg" class="avatar avatar-100 photo grav-hashed grav-hijack" height="100" width="100" originals="100" src-orig="../source/assets/images/placeholder-100x100.jpg" scale="2" id="">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem repellat dolorem incidunt provident pariatur illum non praesentium quis dolorum dicta, aliquam quos laborum distinctio numquam, sapiente, aliquid! Possimus assumenda quasi, distinctio commodi minima quidem praesentium, molestias esse repellendus nam facere repellat. Quis architecto labore earum itaque fugiat similique consectetur error voluptate doloribus ullam. <a href="#">Nihil eveniet</a>, velit repellat fuga sit sequi.</p>
