--- a/source/patterns/header.html
+++ b/source/patterns/header.html
@@ -1,11 +1,12 @@
 <div class="home">
 
   <header id="masthead" class="site-header" role="banner">
-    <div class="site-branding">
-      <p class="site-title"><a href="#" rel="home">WordCamp Europe 2018</a></p>
-      <p class="site-description">June 14-16, Belgrade, Serbia | #WCEU</p>
-    </div><!-- .site-branding -->
-
+    <div class="custom-header">
+      <div class="site-branding">
+        <p class="site-title"><a href="#" rel="home">WordCamp Europe 2018</a></p>
+        <p class="site-description">June 14-16, Belgrade, Serbia | #WCEU</p>
+      </div><!-- .site-branding -->
+    </div>
     <nav id="site-navigation" class="main-navigation page-navigation-container" role="navigation">
     <button class="menu-toggle" aria-controls="primary-menu" aria-expanded="false">Primary Menu</button>
       <div class="menu-main-navigation-container">
