--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -97,10 +97,12 @@
 <h2 id="branding">Branding</h2>
 <p>WordCamp header. Read more about <a href="section-1.html#kssref-1-colors">colors</a> and <a href="section-1.html#kssref-1-typography">fonts</a> used on the site.</p>
 <p><header id="masthead" class="site-header" role="banner">
-  <div class="site-branding">
-    <p class="site-title"><a href="#" rel="home">WordCamp Europe 2018</a></p>
-    <p class="site-description">June 14-16, Belgrade, Serbia | #WCEU</p>
-  </div><!-- .site-branding -->
+  <div class="custom-header">
+    <div class="site-branding">
+      <p class="site-title"><a href="#" rel="home">WordCamp Europe 2018</a></p>
+      <p class="site-description">June 14-16, Belgrade, Serbia | #WCEU</p>
+    </div><!-- .site-branding -->
+  </div>
   <!-- #site-navigation -->
 </header><!-- #masthead --></p>
 <h2 id="widgets">Widgets</h2>
