--- a/styleguide/section-6.html
+++ b/styleguide/section-6.html
@@ -1336,11 +1336,12 @@
           <div class="home">
 
   <header id="masthead" class="site-header" role="banner">
-    <div class="site-branding">
-      <p class="site-title"><a href="#" rel="home">WordCamp Europe 2018</a></p>
-      <p class="site-description">June 14-16, Belgrade, Serbia | #WCEU</p>
-    </div><!-- .site-branding -->
-
+    <div class="custom-header">
+      <div class="site-branding">
+        <p class="site-title"><a href="#" rel="home">WordCamp Europe 2018</a></p>
+        <p class="site-description">June 14-16, Belgrade, Serbia | #WCEU</p>
+      </div><!-- .site-branding -->
+    </div>
     <nav id="site-navigation" class="main-navigation page-navigation-container" role="navigation">
     <button class="menu-toggle" aria-controls="primary-menu" aria-expanded="false">Primary Menu</button>
       <div class="menu-main-navigation-container">
@@ -1394,11 +1395,12 @@
         <pre class="prettyprint lang-html"><code data-language="html">&lt;div class=&quot;home&quot;&gt;
 
   &lt;header id=&quot;masthead&quot; class=&quot;site-header&quot; role=&quot;banner&quot;&gt;
-    &lt;div class=&quot;site-branding&quot;&gt;
-      &lt;p class=&quot;site-title&quot;&gt;&lt;a href=&quot;#&quot; rel=&quot;home&quot;&gt;WordCamp Europe 2018&lt;/a&gt;&lt;/p&gt;
-      &lt;p class=&quot;site-description&quot;&gt;June 14-16, Belgrade, Serbia | #WCEU&lt;/p&gt;
-    &lt;/div&gt;&lt;!-- .site-branding --&gt;
-
+    &lt;div class=&quot;custom-header&quot;&gt;
+      &lt;div class=&quot;site-branding&quot;&gt;
+        &lt;p class=&quot;site-title&quot;&gt;&lt;a href=&quot;#&quot; rel=&quot;home&quot;&gt;WordCamp Europe 2018&lt;/a&gt;&lt;/p&gt;
+        &lt;p class=&quot;site-description&quot;&gt;June 14-16, Belgrade, Serbia | #WCEU&lt;/p&gt;
+      &lt;/div&gt;&lt;!-- .site-branding --&gt;
+    &lt;/div&gt;
     &lt;nav id=&quot;site-navigation&quot; class=&quot;main-navigation page-navigation-container&quot; role=&quot;navigation&quot;&gt;
     &lt;button class=&quot;menu-toggle&quot; aria-controls=&quot;primary-menu&quot; aria-expanded=&quot;false&quot;&gt;Primary Menu&lt;/button&gt;
       &lt;div class=&quot;menu-main-navigation-container&quot;&gt;
